// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiagnosisSearch > RTL support > matches LTR snapshot 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-3"
    >
      <h3
        class="text-2xl font-black tracking-tight text-foreground"
      >
        Diagnosis
      </h3>
      <div
        aria-label="Diagnosis rank"
        class="flex gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="inline-flex items-center justify-center rounded-pill px-5 py-2 text-sm font-semibold transition-all duration-100 ease-out hover:brightness-[1.04] active:brightness-[0.88] focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:brightness-100 motion-reduce:hover:brightness-100 motion-reduce:active:brightness-100 bg-pill-green text-pill-text"
          role="radio"
        >
          Primary
        </button>
        <button
          aria-checked="false"
          class="inline-flex items-center justify-center rounded-pill px-5 py-2 text-sm font-semibold transition-all duration-100 ease-out hover:brightness-[1.04] active:brightness-[0.88] focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:brightness-100 motion-reduce:hover:brightness-100 motion-reduce:active:brightness-100 bg-secondary text-secondary-foreground"
          role="radio"
        >
          Secondary
        </button>
      </div>
      <div
        class="relative"
      >
        <input
          aria-controls="diagnosis-results"
          aria-expanded="false"
          aria-label="Search diagnoses"
          class="w-full rounded-xl border border-border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 focus:border-primary-400 focus:ring-primary-200 disabled:opacity-50 disabled:cursor-not-allowed"
          placeholder="Search ICD-10 code or diagnosis name..."
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DiagnosisSearch > RTL support > matches RTL snapshot 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-3"
    >
      <h3
        class="text-2xl font-black tracking-tight text-foreground"
      >
        Diagnosis
      </h3>
      <div
        aria-label="Diagnosis rank"
        class="flex gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="inline-flex items-center justify-center rounded-pill px-5 py-2 text-sm font-semibold transition-all duration-100 ease-out hover:brightness-[1.04] active:brightness-[0.88] focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:brightness-100 motion-reduce:hover:brightness-100 motion-reduce:active:brightness-100 bg-pill-green text-pill-text"
          role="radio"
        >
          Primary
        </button>
        <button
          aria-checked="false"
          class="inline-flex items-center justify-center rounded-pill px-5 py-2 text-sm font-semibold transition-all duration-100 ease-out hover:brightness-[1.04] active:brightness-[0.88] focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:brightness-100 motion-reduce:hover:brightness-100 motion-reduce:active:brightness-100 bg-secondary text-secondary-foreground"
          role="radio"
        >
          Secondary
        </button>
      </div>
      <div
        class="relative"
      >
        <input
          aria-controls="diagnosis-results"
          aria-expanded="false"
          aria-label="Search diagnoses"
          class="w-full rounded-xl border border-border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 focus:border-primary-400 focus:ring-primary-200 disabled:opacity-50 disabled:cursor-not-allowed"
          placeholder="Search ICD-10 code or diagnosis name..."
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
